[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BookerDownloadTool"
version = "2025.3.25.0"
description = "book download tool for DracoUnion"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "SATA"}
authors = [
    {name = "wizardforcel", email = "wizard.z@qq.com"},
]
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Documentation",
    "Topic :: Documentation",
]
dependencies = [
    "requests",
    "pyquery",
    "EpubCrawler",
    "selenium",
    "imgyaso",
    "pyexecjs",
    "img2jb2pdf",
    "pandas",
    "sqlalchemy",
]

[project.urls]
Homepage = "https://github.com/DracoUnion/BookerDownloadTool"

[project.scripts]
BookerDownloadTool = "BookerDownloadTool.__main__:main"
bdt = "BookerDownloadTool.__main__:main"
dl-tool = "BookerDownloadTool.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["BookerDownloadTool*"]

[tool.setuptools.package-data]
"*" = ["*"]
